2009-04-21  Adam Roben  <aroben@apple.com>

        Rename JavaScriptCore_debug.dll to JavaScriptCore.dll in the Debug
        configuration

        This matches the naming scheme for WebKit.dll, and will be necessary
        once Safari links against JavaScriptCore.dll. This change also causes
        run-safari not to fail (because the launcher printed by FindSafari was
        always looking for JavaScriptCore.dll, never
        JavaScriptCore_debug.dll).

        Part of Bug 25305: can't run safari or drt on windows
        <https://bugs.webkit.org/show_bug.cgi?id=25305>

        Reviewed by Steve Falkenburg and Sam Weinig.

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.vcproj:
        * JavaScriptCore.vcproj/jsc/jsc.vcproj:
        * JavaScriptCore.vcproj/testapi/testapi.vcproj:
        Use $(WebKitDLLConfigSuffix) for naming JavaScriptCore.{dll,lib}.

2009-04-21  Adam Roben  <aroben@apple.com>

        Fix JavaScriptCore build on VC++ Express

        Reviewed by Steve Falkenburg and Sam Weinig.

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.vcproj: Link
        explicitly against gdi32.lib and oleaut32.lib.

2009-04-21  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Mark Rowe.
        
        Tiger crash fix: Put VM tags in their own header file, and fixed up the
        #ifdefs so they're not used on Tiger.

        * JavaScriptCore.xcodeproj/project.pbxproj:
        * interpreter/RegisterFile.h:
        (JSC::RegisterFile::RegisterFile):
        * jit/ExecutableAllocatorFixedVMPool.cpp:
        (JSC::FixedVMPoolAllocator::FixedVMPoolAllocator):
        * jit/ExecutableAllocatorPosix.cpp:
        (JSC::ExecutablePool::systemAlloc):
        * runtime/Collector.cpp:
        (JSC::allocateBlock):
        * wtf/VMTags.h: Added.

2009-04-20  Steve Falkenburg  <sfalken@apple.com>

        More Windows build fixes.

        * JavaScriptCore.vcproj/JavaScriptCore.make: Copy DLLs, PDBs.