@@ -6,12 +6,12 @@
 <h2>Test results, squirrelfish</h2><br>
 <p class='results_summary'>
 Test List: All tests<br>
-Skip List: ecma_3/Date/15.9.5.7.js, ecma/Date/15.9.2.2-1.js, ecma/Date/15.9.2.2-4.js<br>
-1132 test(s) selected, 1124 test(s) completed, 49 failures reported (4.35% failed)<br>
+Skip List: ecma/Date/15.9.2.1.js, ecma/Date/15.9.2.2-1.js, ecma/Date/15.9.2.2-2.js, ecma/Date/15.9.2.2-3.js, ecma/Date/15.9.2.2-4.js, ecma/Date/15.9.2.2-5.js, ecma/Date/15.9.2.2-6.js, ecma_3/Date/15.9.5.7.js<br>
+1127 test(s) selected, 1119 test(s) completed, 49 failures reported (4.37% failed)<br>
 Engine command line: "/Volumes/Big/ggaren/build/Debug/jsc" <br>
-OS type: Darwin geoffreygaren.local 9.6.0 Darwin Kernel Version 9.6.0: Fri Oct 17 22:38:41 PDT 2008; root:xnu-1228.9.56~1/RELEASE_I386 i386<br>
-Testcase execution time: 1 minutes, 38 seconds.<br>
-Tests completed on Mon Apr 13 14:43:10 2009.<br><br>
+OS type: Darwin il0301a-dhcp53.apple.com 9.7.0 Darwin Kernel Version 9.7.0: Tue Mar 31 22:52:17 PDT 2009; root:xnu-1228.12.14~1/RELEASE_I386 i386<br>
+Testcase execution time: 3 minutes, 18 seconds.<br>
+Tests completed on Tue Apr 21 12:56:28 2009.<br><br>
 [ <a href='#fail_detail'>Failure Details</a> | <a href='#retest_list'>Retest List</a> | <a href='menu.html'>Test Selection Page</a> ]<br>
 <hr>
 <a name='fail_detail'></a>
@@ -517,9 +517,9 @@ STATUS: See https://bugzilla.mozilla.org/show_bug.cgi?id=304828<br>
 <pre>
 <a name='retest_list'></a>
 <h2>Retest List</h2><br>
-# Retest List, squirrelfish, generated Mon Apr 13 14:43:10 2009.
+# Retest List, squirrelfish, generated Tue Apr 21 12:56:28 2009.
 # Original test base was: All tests.
-# 1124 of 1132 test(s) were completed, 49 failures reported.
+# 1119 of 1127 test(s) were completed, 49 failures reported.
 ecma/TypeConversion/9.3.1-3.js
 ecma_2/Exceptions/function-001.js
 ecma_3/FunExpr/fe-001.js
