@@ -1,3 +1,12 @@
+2009-04-21  Geoffrey Garen  <ggaren@apple.com>
+
+        Rubber-stamped by Adam Roben.
+        
+        Disabled one more Mozilla JS test because it fails intermittently on Windows.
+        (See https://bugs.webkit.org/show_bug.cgi?id=25160.)
+
+        * tests/mozilla/expected.html:
+
 2009-04-21  Adam Roben  <aroben@apple.com>
 
         Rename JavaScriptCore_debug.dll to JavaScriptCore.dll in the Debug
